--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,9 +9,9 @@ website:
         text: Accueil
       - href: pages/profil.qmd
         text: Profil
-      - href: pages/liste_decouvrir.qmd
+      - href: pages/decouvrir_r.qmd
         text: Découvrir R
-      - href: pages/liste_projets.qmd
+      - href: pages/projets.qmd
         text: Projets
       - href: pages/tidytuesday.qmd
         text: Tidytuesday
