--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,9 @@ jobs:
         with:
           r-version: '4.2.0'
 
+      - name: install libcurl on server
+        run: sudo apt-get install -y libcurl4-openssl-dev
+
       - name: Install R Dependencies
         uses: r-lib/actions/setup-renv@v2
         with:
