--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,8 +9,8 @@ website:
         text: Accueil
       - href: pages/profil.qmd
         text: Profil
-      - href: pages/decouvrir_r.qmd
-        text: Découvrir R
+      - href: pages/articles.qmd
+        text: Articles
       - href: pages/projets.qmd
         text: Projets
       - href: pages/tidytuesday.qmd
